# MultiPlayer-Game-Test

./: Prompt  README.md
.github/workflows/: android-build.yml  cpp-core.yml
App/: build.gradle
App/src/main/: AndroidManifest.xml
App/src/main/cpp/: CMakeLists.txt  native-lib.cpp
App/src/main/java/com/cstudioss/fpsgame/: MainActivity.java
App/src/main/res/layout/: activity_main.xml
Core/: CMakeLists.txt
Core/include/: ChatService.hpp  DataModel.hpp  ExampleService.hpp  Game.hpp  MapService.hpp  NetworkHandle.hpp  NotificationService.hpp  Players.hpp  ServerModel.hpp  ServerScriptService.hpp  ServerStorage.hpp  ShooterService.hpp
Core/src/: ChatService.cpp  DataModel.cpp  ExampleService.cpp  Game.cpp  MapService.cpp  NetworkHandle.cpp  NotificationService.cpp  Players.cpp  ServerModel.cpp  ServerScriptService.cpp  ServerStorage.cpp  ShooterService.cpp  main.cpp
Vercel/: package.json
Vercel/api/: index.js
